src/snapshots/purs_oxide__parser__tests__case_guards_2.snap
---
source: src/parser.rs
expression: "parse_expr(indoc!(\"\n          case x of\n            A | true, Just x <- foo + bar -> 1\n        \"))"
---
Located(
    SourceSpan {
        start: 0,
        end: 47,
    },
    Case {
        exprs: [
            Located(
                SourceSpan {
                    start: 5,
                    end: 6,
                },
                Var(
                    QualifiedName {
                        symbol: Symbol(
                            Id {
                                value: 1,
                            },
                        ),
                        actually_qualified: false,
                    },
                ),
            ),
        ],
        branches: [
            CaseBranch {
                pats: [
                    Located(
                        SourceSpan {
                            start: 12,
                            end: 13,
                        },
                        DataConstructorApp(
                            QualifiedName {
                                symbol: Symbol(
                                    Id {
                                        value: 2,
                                    },
                                ),
                                actually_qualified: false,
                            },
                            [],
                        ),
                    ),
                ],
                expr: Guarded(
                    [
                        GuardedExpr {
                            guards: [
                                Expr(
                                    Located(
                                        SourceSpan {
                                            start: 16,
                                            end: 20,
                                        },
                                        Literal(
                                            Boolean(
                                                true,
                                            ),
                                        ),
                                    ),
                                ),
                                Bind(
                                    Located(
                                        SourceSpan {
                                            start: 22,
                                            end: 28,
                                        },
                                        DataConstructorApp(
                                            QualifiedName {
                                                symbol: Symbol(
                                                    Id {
                                                        value: 3,
                                                    },
                                                ),
                                                actually_qualified: false,
                                            },
                                            [
                                                Located(
                                                    SourceSpan {
                                                        start: 27,
                                                        end: 28,
                                                    },
                                                    Var(
                                                        Symbol(
                                                            Id {
                                                                value: 1,
                                                            },
                                                        ),
                                                    ),
                                                ),
                                            ],
                                        ),
                                    ),
                                    Located(
                                        SourceSpan {
                                            start: 32,
                                            end: 41,
                                        },
                                        Infix(
                                            Located(
                                                SourceSpan {
                                                    start: 32,
                                                    end: 35,
                                                },
                                                Var(
                                                    QualifiedName {
                                                        symbol: Symbol(
                                                            Id {
                                                                value: 4,
                                                            },
                                                        ),
                                                        actually_qualified: false,
                                                    },
                                                ),
                                            ),
                                            [
                                                (
                                                    Symbol(
                                                        QualifiedName {
                                                            symbol: Symbol(
                                                                Id {
                                                                    value: 5,
                                                                },
                                                            ),
                                                            actually_qualified: false,
                                                        },
                                                    ),
                                                    Located(
                                                        SourceSpan {
                                                            start: 38,
                                                            end: 41,
                                                        },
                                                        Var(
                                                            QualifiedName {
                                                                symbol: Symbol(
                                                                    Id {
                                                                        value: 6,
                                                                    },
                                                                ),
                                                                actually_qualified: false,
                                                            },
                                                        ),
                                                    ),
                                                ),
                                            ],
                                        ),
                                    ),
                                ),
                            ],
                            expr: Located(
                                SourceSpan {
                                    start: 45,
                                    end: 46,
                                },
                                Literal(
                                    Integer(
                                        1,
                                    ),
                                ),
                            ),
                        },
                    ],
                ),
            },
        ],
    },
)
