src/snapshots/purs_oxide__parser__tests__case_in_infix.snap
---
source: src/parser.rs
expression: "parse_expr(indoc!(\"\n            case x of\n                _ -> y\n        <>\n            case x of\n                _ -> y\n        \"))"
---
Located(
    SourceSpan {
        decl: Module(
            ModuleId {
                name: "Test",
            },
        ),
        start: 4,
        end: 61,
    },
    Infix(
        Located(
            SourceSpan {
                decl: Module(
                    ModuleId {
                        name: "Test",
                    },
                ),
                start: 4,
                end: 31,
            },
            Case {
                exprs: [
                    Located(
                        SourceSpan {
                            decl: Module(
                                ModuleId {
                                    name: "Test",
                                },
                            ),
                            start: 9,
                            end: 10,
                        },
                        Var(
                            QualifiedName {
                                module: None,
                                name: Symbol {
                                    text: "x",
                                },
                            },
                        ),
                    ),
                ],
                branches: [
                    CaseBranch {
                        pats: [
                            Located(
                                SourceSpan {
                                    decl: Module(
                                        ModuleId {
                                            name: "Test",
                                        },
                                    ),
                                    start: 22,
                                    end: 23,
                                },
                                Wildcard,
                            ),
                        ],
                        expr: Unconditional(
                            Located(
                                SourceSpan {
                                    decl: Module(
                                        ModuleId {
                                            name: "Test",
                                        },
                                    ),
                                    start: 27,
                                    end: 28,
                                },
                                Var(
                                    QualifiedName {
                                        module: None,
                                        name: Symbol {
                                            text: "y",
                                        },
                                    },
                                ),
                            ),
                        ),
                    },
                ],
            },
        ),
        [
            (
                Symbol(
                    QualifiedName {
                        module: None,
                        name: Symbol {
                            text: "<>",
                        },
                    },
                ),
                Located(
                    SourceSpan {
                        decl: Module(
                            ModuleId {
                                name: "Test",
                            },
                        ),
                        start: 36,
                        end: 61,
                    },
                    Case {
                        exprs: [
                            Located(
                                SourceSpan {
                                    decl: Module(
                                        ModuleId {
                                            name: "Test",
                                        },
                                    ),
                                    start: 41,
                                    end: 42,
                                },
                                Var(
                                    QualifiedName {
                                        module: None,
                                        name: Symbol {
                                            text: "x",
                                        },
                                    },
                                ),
                            ),
                        ],
                        branches: [
                            CaseBranch {
                                pats: [
                                    Located(
                                        SourceSpan {
                                            decl: Module(
                                                ModuleId {
                                                    name: "Test",
                                                },
                                            ),
                                            start: 54,
                                            end: 55,
                                        },
                                        Wildcard,
                                    ),
                                ],
                                expr: Unconditional(
                                    Located(
                                        SourceSpan {
                                            decl: Module(
                                                ModuleId {
                                                    name: "Test",
                                                },
                                            ),
                                            start: 59,
                                            end: 60,
                                        },
                                        Var(
                                            QualifiedName {
                                                module: None,
                                                name: Symbol {
                                                    text: "y",
                                                },
                                            },
                                        ),
                                    ),
                                ),
                            },
                        ],
                    },
                ),
            ),
        ],
    ),
)
