src/snapshots/purs_oxide__parser__tests__data_con_expr.snap
---
source: src/parser.rs
expression: "parse_expr(\"Just 1\")"
---
Located(
    SourceSpan {
        start: 0,
        end: 6,
    },
    App(
        Located(
            SourceSpan {
                start: 0,
                end: 4,
            },
            DataConstructor(
                QualifiedName {
                    [salsa id]: 0,
                    module: None,
                    name: Symbol {
                        [salsa id]: 0,
                        text: "Just",
                    },
                },
            ),
        ),
        [
            Located(
                SourceSpan {
                    start: 5,
                    end: 6,
                },
                Literal(
                    Integer(
                        1,
                    ),
                ),
            ),
        ],
    ),
)
