src/snapshots/purs_oxide__parser__tests__data_decl.snap
---
source: src/parser.rs
expression: "parse_module(indoc!(r#\"\n            module Test where\n            data Maybe a = Nothing | Just a\n            newtype Foo = Foo Int\n            foreign import data X\n            foreign import data X :: Type\n        \"#))"
---
Located(
    SourceSpan {
        start: 0,
        end: 124,
    },
    Commented(
        [],
        ModuleInner {
            name: QualifiedName {
                symbol: Symbol {
                    [salsa id]: 0,
                    text: "Test",
                },
                actually_qualified: false,
            },
            exports: None,
            imports: [],
            declarations: [
                Located(
                    SourceSpan {
                        start: 18,
                        end: 49,
                    },
                    Commented(
                        [],
                        Data {
                            type_: Data,
                            name: Symbol {
                                [salsa id]: 1,
                                text: "Maybe",
                            },
                            params: [
                                (
                                    Symbol {
                                        [salsa id]: 2,
                                        text: "a",
                                    },
                                    None,
                                ),
                            ],
                            kind: None,
                            constructors: [
                                Located(
                                    SourceSpan {
                                        start: 33,
                                        end: 40,
                                    },
                                    Commented(
                                        [],
                                        DataConstructorDeclarationData {
                                            name: Symbol {
                                                [salsa id]: 3,
                                                text: "Nothing",
                                            },
                                            fields: [],
                                        },
                                    ),
                                ),
                                Located(
                                    SourceSpan {
                                        start: 43,
                                        end: 49,
                                    },
                                    Commented(
                                        [],
                                        DataConstructorDeclarationData {
                                            name: Symbol {
                                                [salsa id]: 4,
                                                text: "Just",
                                            },
                                            fields: [
                                                Located(
                                                    SourceSpan {
                                                        start: 48,
                                                        end: 49,
                                                    },
                                                    Var(
                                                        Symbol {
                                                            [salsa id]: 2,
                                                            text: "a",
                                                        },
                                                    ),
                                                ),
                                            ],
                                        },
                                    ),
                                ),
                            ],
                        },
                    ),
                ),
                Located(
                    SourceSpan {
                        start: 50,
                        end: 71,
                    },
                    Commented(
                        [],
                        Data {
                            type_: Newtype,
                            name: Symbol {
                                [salsa id]: 5,
                                text: "Foo",
                            },
                            params: [],
                            kind: None,
                            constructors: [
                                Located(
                                    SourceSpan {
                                        start: 64,
                                        end: 71,
                                    },
                                    Commented(
                                        [],
                                        DataConstructorDeclarationData {
                                            name: Symbol {
                                                [salsa id]: 5,
                                                text: "Foo",
                                            },
                                            fields: [
                                                Located(
                                                    SourceSpan {
                                                        start: 68,
                                                        end: 71,
                                                    },
                                                    TypeConstructor(
                                                        QualifiedName {
                                                            symbol: Symbol {
                                                                [salsa id]: 6,
                                                                text: "Int",
                                                            },
                                                            actually_qualified: false,
                                                        },
                                                    ),
                                                ),
                                            ],
                                        },
                                    ),
                                ),
                            ],
                        },
                    ),
                ),
                Located(
                    SourceSpan {
                        start: 72,
                        end: 93,
                    },
                    Commented(
                        [],
                        Data {
                            type_: ForeignData,
                            name: Symbol {
                                [salsa id]: 7,
                                text: "X",
                            },
                            params: [],
                            kind: None,
                            constructors: [],
                        },
                    ),
                ),
                Located(
                    SourceSpan {
                        start: 94,
                        end: 123,
                    },
                    Commented(
                        [],
                        Data {
                            type_: ForeignData,
                            name: Symbol {
                                [salsa id]: 7,
                                text: "X",
                            },
                            params: [],
                            kind: Some(
                                Located(
                                    SourceSpan {
                                        start: 119,
                                        end: 123,
                                    },
                                    TypeConstructor(
                                        QualifiedName {
                                            symbol: Symbol {
                                                [salsa id]: 8,
                                                text: "Type",
                                            },
                                            actually_qualified: false,
                                        },
                                    ),
                                ),
                            ),
                            constructors: [],
                        },
                    ),
                ),
            ],
        },
    ),
)
