src/snapshots/purs_oxide__parser__tests__do_bind_type_sig.snap
---
source: src/parser.rs
expression: "parse_expr(indoc!(\"\n          do\n            x :: Int <- foo\n            pure 2\n        \"))"
---
Located(
    SourceSpan {
        start: 0,
        end: 30,
    },
    Do(
        [
            Bind(
                Located(
                    SourceSpan {
                        start: 5,
                        end: 13,
                    },
                    Typed(
                        Located(
                            SourceSpan {
                                start: 5,
                                end: 6,
                            },
                            Var(
                                Symbol {
                                    [salsa id]: 0,
                                    text: "x",
                                },
                            ),
                        ),
                        Located(
                            SourceSpan {
                                start: 10,
                                end: 13,
                            },
                            TypeConstructor(
                                QualifiedName {
                                    [salsa id]: 1,
                                    module: None,
                                    name: Symbol {
                                        [salsa id]: 1,
                                        text: "Int",
                                    },
                                },
                            ),
                        ),
                    ),
                ),
                Located(
                    SourceSpan {
                        start: 17,
                        end: 20,
                    },
                    Var(
                        QualifiedName {
                            [salsa id]: 2,
                            module: None,
                            name: Symbol {
                                [salsa id]: 2,
                                text: "foo",
                            },
                        },
                    ),
                ),
            ),
            Expr(
                Located(
                    SourceSpan {
                        start: 23,
                        end: 29,
                    },
                    App(
                        Located(
                            SourceSpan {
                                start: 23,
                                end: 27,
                            },
                            Var(
                                QualifiedName {
                                    [salsa id]: 3,
                                    module: None,
                                    name: Symbol {
                                        [salsa id]: 3,
                                        text: "pure",
                                    },
                                },
                            ),
                        ),
                        [
                            Located(
                                SourceSpan {
                                    start: 28,
                                    end: 29,
                                },
                                Literal(
                                    Integer(
                                        2,
                                    ),
                                ),
                            ),
                        ],
                    ),
                ),
            ),
        ],
    ),
)
