src/snapshots/purs_oxide__parser__tests__do_destructuring_pattern.snap
---
source: src/parser.rs
expression: "parse_expr(indoc!(\"\n          do\n            Tuple x y <- foo\n            pure 2\n        \"))"
---
Located(
    SourceSpan {
        decl: Module(
            ModuleId {
                name: "Test",
            },
        ),
        start: 0,
        end: 31,
    },
    Do(
        [
            Bind(
                Located(
                    SourceSpan {
                        decl: Module(
                            ModuleId {
                                name: "Test",
                            },
                        ),
                        start: 5,
                        end: 14,
                    },
                    DataConstructorApp(
                        QualifiedName {
                            module: None,
                            name: Symbol {
                                text: "Tuple",
                            },
                        },
                        [
                            Located(
                                SourceSpan {
                                    decl: Module(
                                        ModuleId {
                                            name: "Test",
                                        },
                                    ),
                                    start: 11,
                                    end: 12,
                                },
                                Var(
                                    Symbol {
                                        text: "x",
                                    },
                                ),
                            ),
                            Located(
                                SourceSpan {
                                    decl: Module(
                                        ModuleId {
                                            name: "Test",
                                        },
                                    ),
                                    start: 13,
                                    end: 14,
                                },
                                Var(
                                    Symbol {
                                        text: "y",
                                    },
                                ),
                            ),
                        ],
                    ),
                ),
                Located(
                    SourceSpan {
                        decl: Module(
                            ModuleId {
                                name: "Test",
                            },
                        ),
                        start: 18,
                        end: 21,
                    },
                    Var(
                        QualifiedName {
                            module: None,
                            name: Symbol {
                                text: "foo",
                            },
                        },
                    ),
                ),
            ),
            Expr(
                Located(
                    SourceSpan {
                        decl: Module(
                            ModuleId {
                                name: "Test",
                            },
                        ),
                        start: 24,
                        end: 30,
                    },
                    App(
                        Located(
                            SourceSpan {
                                decl: Module(
                                    ModuleId {
                                        name: "Test",
                                    },
                                ),
                                start: 24,
                                end: 28,
                            },
                            Var(
                                QualifiedName {
                                    module: None,
                                    name: Symbol {
                                        text: "pure",
                                    },
                                },
                            ),
                        ),
                        [
                            Located(
                                SourceSpan {
                                    decl: Module(
                                        ModuleId {
                                            name: "Test",
                                        },
                                    ),
                                    start: 29,
                                    end: 30,
                                },
                                Literal(
                                    Integer(
                                        2,
                                    ),
                                ),
                            ),
                        ],
                    ),
                ),
            ),
        ],
    ),
)
